# allium-cepa-automation

./: .dockerignore  .dvcignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.space  Dockerfile.train  LICENCE  README.md  docker-compose.yml  dvc.yaml  entrypoint.sh  params.yaml  pyproject.toml  validation_result.json
.claude/: settings.json
.dvc/: config
.github/workflows/: ci.yml
app/: api.py
dags/: raw_image_ingest.py  retrain_pipeline.py  zooniverse_ingest.py
datasets/: .gitignore
experiments/binary_classifier/efficientnet_b1/: config.yaml  mlflow_run_id.txt
experiments/binary_classifier/efficientnet_b2/: config.yaml
experiments/binary_classifier/efficientnet_b2_20e/: config.yaml  mlflow_run_id.txt
experiments/binary_classifier/resnet50/: config.yaml
experiments/binary_classifier/vgg19/: config.yaml
experiments/yolo/yolo11n_200e/: config.yaml
metrics/: evaluation_report.json
notebooks/analysis/: compare_experiments.ipynb  eda.ipynb
notebooks/inference/: full_pipeline.ipynb
scripts/: calibrate_classifier.py  calibrate_detector.py  deploy_hf_space.py  evaluate.py  promote_model.py  pull_production_weights.py  sweep.py  train_classifier.py  train_detector.py
scripts/utils/: augment_crops.py  classifier_dataset.py  coco_to_yolo.py  download_hf_dataset.py  packing_images.py  push_weights_to_hf.py  upload_hf_dataset.py
space/: README.md
src/allium_cepa_classifier/: __init__.py
src/allium_cepa_classifier/config/: __init__.py  allium_cepa_config.py  base_config.py  detector_config.py  experiment_config.py  production_config.py  training_config.py  validation_config.py  zooniverse_config.py
src/allium_cepa_classifier/data_models/: __init__.py  allium_cepa_model.py  allium_cepa_result.py
src/allium_cepa_classifier/providers/: __init__.py  base.py  dataset_hub.py  drive.py  factory.py  labeling.py  storage.py
src/allium_cepa_classifier/serving/: weights.py
src/allium_cepa_classifier/statistics/: __init__.py  error_propagation.py
src/allium_cepa_classifier/training/: calibrator.py  detector_calibrator.py  mlflow_logging.py  model_builder.py  trainer.py
src/allium_cepa_classifier/validation/: __init__.py  validate_model.py
src/allium_cepa_classifier/weights/: .gitignore  classifier_calibrated.pt.dvc  object_detection.pt.dvc  yolo_isotonic_calibrator.pkl.dvc
src/ui/: app.py  cli.py  client.py
tests/: conftest.py  test_api.py  test_dag_raw_image.py  test_dag_retrain.py  test_dag_zooniverse.py  test_evaluate.py  test_production_weights.py  test_providers_ingestion.py  test_storage_provider.py  test_ui_client.py  test_validate_model.py
tests/fixtures/: annotations_sample.json
tests/fixtures/zooniverse/: classifications.json
thoughts/shared/plans/: 2026-06-06-plan-A-reproducibility-core.md  2026-06-06-plan-B-serving-and-demo.md  2026-06-06-plan-C-ci-and-readme.md  2026-06-06-plan-D-ingestion-and-orchestration.md  2026-06-06-portfolio-roadmap.md
thoughts/shared/research/: allium_cepa_implementation_plan.md
