[project]
name = "allium-cepa-automation"
version = "0.1.0"
description = "Computer vision pipeline for allium cepa cell detection and mitosis classification"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = "==3.12.*"
dependencies = [
    # Deep learning
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "timm>=1.0.0",
    # Detection
    "ultralytics>=8.3.0",
    # Data
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    # Image processing
    "pillow>=10.3.0",
    "opencv-python-headless>=4.9.0",
    # Config & serialization
    "pydantic>=2.7.0",
    "pyyaml>=6.0",
    # HuggingFace
    "huggingface-hub>=0.23.0",
    "pyarrow>=23.0.1",
    "fastparquet>=2026.3.0",
    # Experiment tracking
    "dvc>=3.0",
    "dvclive>=3.0",
    "tensorboard>=2.16.0",
    # Storage provider (local/MinIO/S3 via one env var)
    "s3fs>=2024.1.0",
    # Experiment tracking
    "mlflow>=2.13.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
ingestion = [
    # Zooniverse
    "panoptes-client>=1.6.0",
    # Google Drive
    "google-api-python-client>=2.130.0",
    "google-auth>=2.29.0",
    # Airflow (pinned major; constraints file enforces exact transitive pins)
    "apache-airflow>=2.9.0,<3.0",
]
serving = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "requests>=2.32.0",
    "streamlit>=1.35.0",
]
dev = [
    "ruff>=0.9.0",
    "pre-commit>=3.6.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "jupyter>=1.1.0",
    "ipykernel>=6.29.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.13",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/allium_cepa_classifier"]

# --- PyTorch CUDA backend (prevents uv from installing CPU-only wheels) ---
[tool.uv]
torch-backend = "cu123"

# --- Ruff ---
[tool.ruff]
line-length = 100
target-version = "py312"
# Vendored third-party code is kept byte-for-byte close to upstream.
extend-exclude = ["scripts/vendor"]
# force-exclude so the exclusion also applies when pre-commit passes the file
# path explicitly (otherwise ruff --fix would rewrite the vendored script).
force-exclude = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- Pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
pythonpath = ["src", ".", "dags"]
filterwarnings = [
    "ignore::starlette.testclient.StarletteDeprecationWarning",
    "ignore::FutureWarning:torch.cuda",
]
